syntax = "proto3";
package event;

message Event {
    int64 id = 1;
    string text = 2;
    int64 timestamp = 3;
}


message CreateEventReq {
    Event event = 1;
}

message CreateEventRes {
    Event event = 1;
}

message UpdateEventReq {
    Event event = 1;
}

message UpdateEventRes {
    Event event = 1;
}

message DeleteEventReq {
    int64 id = 1;
}

message DeleteEventRes {
    int64 id = 1;
}


message GetEventReq {
    int64 id = 1;
}

message GetEventRes {
    Event event = 1;
}


message ListEventReq {}

message ListEventRes {
    repeated Event events = 1;
}


service EventService {

    rpc CreateEvent(CreateEventReq) returns (CreateEventRes);
    rpc UpdateEvent(UpdateEventReq) returns (UpdateEventRes);
    rpc DeleteEvent(DeleteEventReq) returns (DeleteEventRes);
    rpc GetEvent(GetEventReq) returns (GetEventRes);
    rpc ListEvents(ListEventReq) returns (ListEventRes);

}